<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".view.detail.DetailStory">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp">

		<ImageView
			android:id="@+id/iv_story"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:scaleType="fitCenter"
			app:layout_constraintTop_toTopOf="parent"
			tools:srcCompat="@tools:sample/backgrounds/scenic" />


		<TextView
			android:id="@+id/tv_user"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:textSize="24sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/iv_story"
			tools:text="@string/username" />

		<TextView
			android:id="@+id/tv_date"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:padding="8dp"
			android:textSize="16sp"
			android:textStyle="italic"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/tv_description"
			app:layout_constraintTop_toBottomOf="@+id/tv_description"
			tools:text="@string/date" />

		<TextView
			android:id="@+id/tv_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:justificationMode="inter_word"
			android:padding="8dp"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/tv_user"
			app:layout_constraintTop_toBottomOf="@+id/tv_user"
			tools:text="@string/description" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>