<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".view.storyadd.StoryAdd">


	<ImageView
		android:id="@+id/previewImageView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toTopOf="@+id/cameraButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_placeholder" />

	<Button
		android:id="@+id/cameraButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:textColor="@color/black"
		android:text="@string/camera"
		app:layout_constraintBottom_toTopOf="@+id/desc_layout"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/galleryButton" />

	<Button
		android:id="@+id/galleryButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:textColor="@color/black"
		android:elevation="2dp"
		android:scaleType="fitCenter"
		android:text="@string/gallery"
		app:layout_constraintBottom_toBottomOf="@+id/cameraButton"
		app:layout_constraintEnd_toStartOf="@+id/cameraButton"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/cameraButton" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/desc_layout"
		android:layout_width="0dp"
		android:layout_height="200dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintBottom_toTopOf="@+id/uploadButton"
		app:layout_constraintTop_toBottomOf="@id/galleryButton">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/desc_edit_text"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="top"
			android:justificationMode="inter_word"
			android:hint="@string/description"/>

	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/uploadButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:textColor="@color/black"
		android:text="@string/upload"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>